--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -78,6 +78,11 @@ css: "datta-fest"
                             <td class="gold" colspan="3"> LUNCH </td>
                         </tr>
                         <tr>
+                            <td>2:05 pm &ndash; 2:35 pm (slides<a href="#slidetalk" class="lead gold">&midast;</a>)</td>
+                            <td>Wolfgang Kühnel (University of Stuttgart) </td>
+                            <td><a href="titles.html#kuhnel">Generalized Heawood numbers</a></td>
+                        </tr>
+                        <tr>
                             <td>2:45 pm &ndash; 3:30 pm</td>
                             <td>Jonathan Spreer (University of Sydney, Australia)</td>
                             <td><a href="titles.html#spreer">An algorithm to compute the crosscap number of a knot</a></td>
@@ -92,6 +97,7 @@ css: "datta-fest"
                             </span>
                     </tbody>
                 </table>
+            <p><span class="gold" id="slidetalk">&lowast;</span> The slides of Wolfgang Kühnel will be presented by Biplab Basak.</p>
             </div>
 
         <div id="register" class="pt-3">
