--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -97,7 +97,7 @@ css: "datta-fest"
                             </span>
                     </tbody>
                 </table>
-            <p><span class="gold" id="slidetalk">&lowast;</span> The slides of Wolfgang Kühnel will be presented by Biplab Basak.</p>
+            <p><span class="gold" id="slidetalk">&lowast;</span> The slides of Wolfgang Kühnel will be presented by Biplab Basak and Nitin Singh.</p>
             </div>
 
         <div id="register" class="pt-3">
