--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -61,7 +61,7 @@ css: "datta-fest"
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:10 pm &ndash; 2:40 pm</a> </h5>
                 <p>
                     <strong>Abstract:</strong>  </p>
-                    <p><span class="gold" id="slidetalk">&lowast;</span> The slides of Wolfgang Kühnel will be presented by Biplab Basak.</p>
+                    <p><span class="gold" id="slidetalk">&lowast;</span> The slides of Wolfgang Kühnel will be presented by Biplab Basak and Nitin Singh.</p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="spreer">
