--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -49,10 +49,13 @@ css: "datta-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="sarkar">
                 <h5><strong>Speaker:</strong> Soumen Sarkar, Indian Institute of Technology, Madras </h5>
-                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Title:</strong> On triangulations of a class of quasitoric manifolds </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:20 pm &ndash; 1:05 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> In this talk, we review the concept of triangulation and quasitoric manifolds.
+                    Then, we discuss some explicit triangulation of certain 4-dimensional quasitoric manifolds
+                    
+                    and 8-dimensional complex projective space. The results are joint work with Basudeb Datta.  </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="kuhnel">
