--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -72,7 +72,7 @@ css: "datta-fest"
                         <tr>
                             <td>12:20 pm &ndash; 1:05 pm</td>
                             <td>Soumen Sarkar (IIT, Madras)</td>
-                            <td>to be announced</td>
+                            <td><a href="titles.html#sarkar">On triangulations of a class of quasitoric manifolds</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
