Added the poster for Koranyi conference, Updated Tiltle and Abstract for mkgfest and thangavelufest

--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -58,7 +58,7 @@ css: "mkg-fest"
                         <tr>
                             <td>10:10 am &ndash; 10:50 am</td>
                             <td>Suresh Kumar</td>
-			    <td><a href="titles.html#Kumar">to be announced</a></td>
+			    <td><a href="titles.html#Kumar"> Non zero sum risk sensitive stochastic differential games</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
@@ -71,7 +71,7 @@ css: "mkg-fest"
                         <tr>
                             <td>12:00 pm &ndash; 12:40 pm</td>
                             <td>Anup Biswas (IISER Pune)</td>
-			    <td><a href="titles.html#Anup">to be announced</a></td>
+			    <td><a href="titles.html#Anup"> Existence-Uniqueness results for nonlinear integro-differential equations</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
