--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -26,10 +26,11 @@ css: "mkg-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Kumar">
                 <h5><strong>Speaker:</strong> Suresh Kumar </h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong> Non zero sum risk sensitive stochastic differential games </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:10 am &ndash; 10:50 am</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> In this talk, we discuss  nonzero-sum stochastic differential
+games with risk-sensitive ergodic cost criterion. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Borkar">
@@ -42,10 +43,11 @@ css: "mkg-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Biswas">
                 <h5><strong>Speaker:</strong> Anup Biswas </h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong> Existence-Uniqueness results for nonlinear integro-differential equations </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 12:40 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> Motivated by the ergodic control problem for jump-diffusions,   we consider a
+HJB equation in Rd where the nonlocal term is comparable with the fractional Laplacian. Under a blanket stability hypothesis, we establish the existence-uniqueness results. In this talk, we shall discuss this equation and the hurdles associated to it. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Rajeev">
