--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -67,7 +67,7 @@ css: "thangavelu-fest"
                         <tr>
                             <td>12:00 pm &ndash; 1:00 pm</td>
                             <td>Bernhard Krotz (University of Paderborn, Germany)</td>
-			    <td><a href="titles.html#Krotz">to be announced</a></td>
+			    <td><a href="titles.html#Krotz"> A Paley-Wiener theorem for Harish-Chandra modules</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
@@ -75,7 +75,7 @@ css: "thangavelu-fest"
                         <tr>
                             <td>2:30 pm &ndash; 3:30 pm</td>
 			    <td>Rahul Garg (IISER Bhopal)</td>
-			    <td><a href="titles.html#Garg">to be announced</a></td>
+			    <td><a href="titles.html#Garg"> On pseudo-multipliers associated to Grushin operators</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
