--- a/thangavelufest/titles.html
+++ b/thangavelufest/titles.html
@@ -34,18 +34,18 @@ css: "thangavelu-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Krotz">
                 <h5><strong>Speaker:</strong> Bernhard Krotz  </h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong> A Paley-Wiener theorem for Harish-Chandra modules </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 1:00 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> We formulate and prove a Paley-Wiener theorem for Harish-Chandra modules for real reductive groups. As a corollary we obtain a new and elementary proof of the Helgason conjecture </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Garg">
                 <h5><strong>Speaker:</strong> Rahul Garg  </h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong> On pseudo-multipliers associated to Grushin operators </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:30 pm &ndash; 3:30 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> We shall discuss our recent results on Grushin pseudo-multipliers. Part of this talk is based on a joint work (arXiv:2202.10269) with Sayan Bagchi, Riju Basak and Abhishek Ghosh.  </p>
         </div>
     </div>
 </div>
