--- a/dattafest/index.html
+++ b/dattafest/index.html
@@ -59,7 +59,8 @@ css: "datta-fest"
                         <tr>
                             <td>10:20 am &ndash; 11:05 am (online)</td>
                             <td>Benjamin Burton (University of Queensland, Australia)</td>
-                            <td>to be announced</td>
+                            <td><a href="titles.html#burton">The power of cheap tricks: Using combinatorial structure in topological software</a>
+                            </td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
