--- a/dattafest/titles.html
+++ b/dattafest/titles.html
@@ -28,10 +28,14 @@ css: "datta-fest"
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="burton">
                 <h5><strong>Speaker:</strong> Benjamin Burton, University of Queensland, Australia </h5>
-                <h5><strong>Title:</strong> to be announced </h5>
+                <h5><strong>Title:</strong> The power of cheap tricks: Using combinatorial structure in topological software
+                </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:20 am &ndash; 11:05 am</a> (online) </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> Low-dimensional topology is full of algorithmic problems whose best known running times are exponential, or doubly-exponential, or worse - and in some cases even undecidable. Nevertheless, there is a need to have software that can actually solve these problems in practice, despite the theoretical limitations. For this we use “cheap tricks” - techniques that might not always work, but when they do will give fast, correct and certified results.</p>
+
+                    <p>Combinatorial techniques play an important and powerful role in these tricks. We will talk through some key ideas, including well-structured triangulations, graph structure theory and properties of the dual skeleton, and how these are used in practice to find new results in knot theory, 3-manifold and 4-manifold topology.
+                     </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="murai">
