Updated Title for thangavelufest

--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -53,7 +53,7 @@ css: "thangavelu-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:30 am</td>
                             <td>Jotsaroop Kaur (IISER Mohali)</td>
-			    <td><a href="titles.html#Kaur">to be announced</a></td>
+			    <td><a href="titles.html#Kaur"> Maximal Bilinear Bochner Riesz means and some applications</a></td>
                         </tr>
                         </tr>
 			<tr class="text-center">
