--- a/thangavelufest/titles.html
+++ b/thangavelufest/titles.html
@@ -18,10 +18,11 @@ css: "thangavelu-fest"
             <div>
             <div class="pt-3 border-bottom border-secondary" id="Kaur">
                 <h5><strong>Speaker:</strong> Jotsaroop Kaur </h5>
-                <h5><strong>Title:</strong> </h5>
+                <h5><strong>Title:</strong> Maximal Bilinear Bochner Riesz means and some applications</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:30 am</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> We will discuss the Lp boundedness of maximal Bilinear Bochner Riesz means. We will also introduce the corresponding square function and study its boundedness properties. 
+In the last part of the talk we will discuss some applications of Stein's square function in getting maximal estimates for a class of bilinear multipliers. </p>
             </div>
             <hr class="col-xs-12">
             <div class="border-bottom border-secondary" id="Ganguly">
