Added tentative schedule

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1346,8 +1346,12 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Schedule</h2>
                     <hr class="divider light my-4" />
+                    <p>A tentative schedule is as follows:</p>
+                    <a href="assets/img/schedule.png" target="_blank">
+                    <img class="img-fluid" src="assets/img/schedule.png" alt="Tentative schedule" style="width:750px;">
+                    </a> 
                     <p class="text-white-50 mb-4">The list of accepted talks and posters is below. Presenters are marked with an asterisk. 
-			The detailed schedule will appear later.</p>
+                    </p>
                 </div>
             </div>
 
