Updated Title and Abstract for adamkoranyibirthday, mkgfest and thangavelufest

--- a/adamkoranyibirthday/index.html
+++ b/adamkoranyibirthday/index.html
@@ -25,14 +25,6 @@ css: "ak-fest"
                  The meeting will be held in virtual mode and a zoom link will be provided closer to the date of the meeting.
             </p>
 	    <p> Three talks are scheduled during the first half and the second half would be for colleagues and friends to speak of their friendship and mathematical collaboration with Professor Adam Korányi. The times indicated in the schedule of talks are local times in India. </p>
-            <h2>Schedule</h2>
-            <ul>
-                <li>Lecture I: Jacques Faraut 19:00 - 19:50</li>
-                <li>Lecture II: Harald Upmeier 19:55 - 20:45</li>
-                <li>Lecture III: E. K. Naryanan 20:50 - 21:40</li>
-                <li>Break: 21:45 - 22:30</li>
-                <li>Conversations: 22:30 - 00:00</li>
-            </ul>
 	    <h2>Organizing Committee</h2>
             <ul>
                 <li>Gadadhar Misra </li>
@@ -43,4 +35,46 @@ css: "ak-fest"
         </div>
         <div class="col-md-4"><img src="ak1.jpg" width="100%" /></div>
  </div>
-</div>
+<div class="row pt-5">
+        <div class="col-md-12" id="schedule">
+            <h2 class="text-center">Schedule of Lectures</h2>
+            <div class="row pt-3">
+
+
+                <table class="table table-striped table-bordered table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">Time</th>
+                            <th scope="col">Speaker</th>
+                            <th scope="col">Title</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> 19:00 &ndash;19:50 </td>
+                            <td>Jacques Faraut  </td>
+                            <td><a href="titles.html#faraut">Adam Koranyi, Mathematician</a></td>
+                        </tr>
+                        <tr>
+                            <td>19:55 &ndash;20:45 </td>
+                            <td> Harald Upmeier </td>
+                            <td><a href="titles.html#upmeier">The Impact of Adam Korányi’s Work on Jordan Theory</a>
+                            </td>
+                        </tr>
+			<tr>
+                            <td>20:50 &ndash;21:40 </td>
+                            <td> E. K. Narayanan  </td>
+                            <td><a href="titles.html#narayanan">Koranyi and the classification of homogenous operators in the Cowen-Douglas class on the unit disc</a>
+                            </td>
+                        </tr>
+                        <tr class="text-center">
+                            <td class="gold" colspan="3"> BREAK </td>
+                        </tr>
+                        <tr>
+                            <td> 22:30 &ndash; 00:00</td>
+                            <span class="text-center">
+                                <td class="lead" colspan="2">Conversations</td>
+                            </span>
+                    </tbody>
+                </table>
+            </div>
