--- a/mkgfest/index.html
+++ b/mkgfest/index.html
@@ -53,12 +53,12 @@ css: "mkg-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:10 am</td>
                             <td>Gopal Basak (ISI, Kolkatta) </td>
-			    <td><a href="titles.html#Basak">to be announced</a></td>
+			    <td><a href="titles.html#basak">to be announced</a></td>
                         </tr>
                         <tr>
                             <td>10:10 am &ndash; 10:50 am</td>
                             <td>Suresh Kumar</td>
-			    <td><a href="titles.html#Kumar"> Non zero sum risk sensitive stochastic differential games</a></td>
+			    <td><a href="titles.html#kumar"> Non zero sum risk sensitive stochastic differential games</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
@@ -66,12 +66,12 @@ css: "mkg-fest"
                         <tr>
                             <td>11:20 am &ndash; 12:00 pm </td>
                             <td>Vivek Borkar (IIT-B)</td>
-			    <td><a href="titles.html#Borkar">In search of Markov solutions</a></td>
+			    <td><a href="titles.html#borkar">In search of Markov solutions</a></td>
 			</tr>
                         <tr>
                             <td>12:00 pm &ndash; 12:40 pm</td>
                             <td>Anup Biswas (IISER Pune)</td>
-			    <td><a href="titles.html#Anup"> Existence-Uniqueness results for nonlinear integro-differential equations</a></td>
+			    <td><a href="titles.html#anup"> Existence-Uniqueness results for nonlinear integro-differential equations</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
@@ -79,12 +79,12 @@ css: "mkg-fest"
                         <tr>
                             <td>2:10 pm &ndash; 2:50 pm</td>
                             <td>B. Rajeev (ISI Bangalore)</td>
-			    <td><a href="titles.html#Rajeev">to be announced</a></td>
+			    <td><a href="titles.html#rajeev"> Stochastic Models for Barrier Crossing and Fluctuations in Local Time Scale. Rajeev Bhaskaran and Vijay Ganesh Sadhasivam.</a></td>
                         </tr>
 			<tr>
                             <td>2:50 pm &ndash; 3:30 pm</td>
                             <td>Imran Biswas (TIFR-CAM)</td>
-			    <td><a href="titles.html#Imran">to be announced</a></td>
+			    <td><a href="titles.html#imran"> Obstacle problem for stochastic conservation laws and Lewy-Stampaccia inequality</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
