--- a/mkgfest/titles.html
+++ b/mkgfest/titles.html
@@ -16,7 +16,7 @@ css: "mkg-fest"
         <h4>Monday, 25 July, 2022</h4>
     </div>
             <div>
-            <div class="pt-3 border-bottom border-secondary" id="Basak">
+            <div class="pt-3 border-bottom border-secondary" id="basak">
                 <h5><strong>Speaker:</strong> Gopal Basak</h5>
                 <h5><strong>Title:</strong> </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:10 am</a> </h5>
@@ -24,7 +24,7 @@ css: "mkg-fest"
                     <strong>Abstract:</strong>  </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Kumar">
+            <div class="border-bottom border-secondary" id="kumar">
                 <h5><strong>Speaker:</strong> Suresh Kumar </h5>
                 <h5><strong>Title:</strong> Non zero sum risk sensitive stochastic differential games </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">10:10 am &ndash; 10:50 am</a> </h5>
@@ -33,7 +33,7 @@ css: "mkg-fest"
 games with risk-sensitive ergodic cost criterion. </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Borkar">
+            <div class="border-bottom border-secondary" id="borkar">
                 <h5><strong>Speaker:</strong> Vivek Borkar </h5>
                 <h5><strong>Title:</strong>  In search of Markov solutions</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:20 am &ndash; 12:00 pm</a> </h5>
@@ -41,7 +41,7 @@ games with risk-sensitive ergodic cost criterion. </p>
                     <strong>Abstract:</strong>  The problem of selecting a Markov family of solutions for ill-posed stochastic differential equations is revisited, and issues with the resolution thereof by Krylov are pointed out. An alternative approach in the spirit of Kolmogorov's philosophy based on 'small noise limits' was proposed in an earlier work with K. Suresh Kumar. This talk, after sketching the background in some detail, will present improved results with A. Sumith Reddy, where a unique Feller selection is possible under certain technical conditions. The approach uses  viscosity solutions of the associated backward Kolmogorov equation, whose well-posedness is established as a part of this work.</p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Biswas">
+            <div class="border-bottom border-secondary" id="anup">
                 <h5><strong>Speaker:</strong> Anup Biswas </h5>
                 <h5><strong>Title:</strong> Existence-Uniqueness results for nonlinear integro-differential equations </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 12:40 pm</a> </h5>
@@ -50,20 +50,20 @@ games with risk-sensitive ergodic cost criterion. </p>
 HJB equation in Rd where the nonlocal term is comparable with the fractional Laplacian. Under a blanket stability hypothesis, we establish the existence-uniqueness results. In this talk, we shall discuss this equation and the hurdles associated to it. </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Rajeev">
+            <div class="border-bottom border-secondary" id="rajeev">
                 <h5><strong>Speaker:</strong> B. Rajeev</h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong>  Stochastic Models for Barrier Crossing and Fluctuations in Local Time Scale. Rajeev Bhaskaran and Vijay Ganesh Sadhasivam.</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:10 pm &ndash; 2:50 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> The problem of computing the rate of diffusion-aided activated barrier crossings between metastable states is one of broad relevance in physical sciences. The transition path formalism aims to compute the rate of these events by analysing the statistical properties of the transition path between the two metastable regions concerned. In this paper, we show that the transition path process is a unique solution to an associated stochastic differential equation (SDE), with a discontinuous and singular drift term. The singularity arises from a local time contribution, which accounts for the fluctuations at the boundaries of the metastable regions. The presence of fluctuations at the local time scale calls for an excursion theoretic consideration of barrier crossing events. We show that the rate of such events, as computed from excursion theory, factorizes into a local time term and an excursion measure term, which bears empirical similarity to the rate expression in transition state theory. Since excursion theory makes no assumption about the presence of a transition state in the potential energy landscape, the mathematical structure underlying this factorization ought to be general. We hence expect excursion theory (and local times) to provide some physical and mathematical insights in generic barrier crossing problems. </p>
             </div>
 	    <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Biswas">
+            <div class="border-bottom border-secondary" id="imran">
 		    <h5><strong>Speaker:</strong> Imran Biswas</h5>
-                <h5><strong>Title:</strong>  </h5>
+                <h5><strong>Title:</strong> Obstacle problem for stochastic conservation laws and Lewy-Stampaccia inequality </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:50 pm &ndash; 3:30 pm</a> </h5>
                 <p>
-                    <strong>Abstract:</strong>  </p>
+                    <strong>Abstract:</strong> We wish to talk about some recent results on the obstacle problem for stochastic conservation laws. We propose a definition of the stochastic entropy solution for a bilateral obstacle problem and prove the wellposedness of the problem via a combination of a penalization technique and the vanishing viscosity method. In tandem with Kruzkhov’s doubling variable, this combination manifests itself via Lagrange multipliers and we are able to obtain existence and uniqueness of solution. </p>
         </div>
     </div>
 </div>
