--- a/thangavelufest/titles.html
+++ b/thangavelufest/titles.html
@@ -16,7 +16,7 @@ css: "thangavelu-fest"
         <h4>Tuesday, 26 July, 2022</h4>
     </div>
             <div>
-            <div class="pt-3 border-bottom border-secondary" id="Kaur">
+            <div class="pt-3 border-bottom border-secondary" id="kaur">
                 <h5><strong>Speaker:</strong> Jotsaroop Kaur </h5>
                 <h5><strong>Title:</strong> Maximal Bilinear Bochner Riesz means and some applications</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">09:30 am &ndash; 10:30 am</a> </h5>
@@ -25,7 +25,7 @@ css: "thangavelu-fest"
 In the last part of the talk we will discuss some applications of Stein's square function in getting maximal estimates for a class of bilinear multipliers. </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Ganguly">
+            <div class="border-bottom border-secondary" id="pritam">
                 <h5><strong>Speaker:</strong> Pritam Ganguly </h5>
                 <h5><strong>Title:</strong>  Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">11:00 am &ndash; 12:00 pm</a> </h5>
@@ -33,7 +33,7 @@ In the last part of the talk we will discuss some applications of Stein's square
                     <strong>Abstract:</strong> In this talk, by bringing out the connection between Hermite and Ornstein-Uhlenbeck operators, we plan to discuss Hardy-type inequalities for the fractional powers of these operators. As part of our strategy, we study an extension problem associated with the Ornstein-Uhlenbeck operator. Additionally, we provide several characterizations of the solutions to the extension problem. This is based on joint work with R. Manna and S. Thangavelu. </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Krotz">
+            <div class="border-bottom border-secondary" id="krotz">
                 <h5><strong>Speaker:</strong> Bernhard Krotz  </h5>
                 <h5><strong>Title:</strong> A Paley-Wiener theorem for Harish-Chandra modules </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">12:00 pm &ndash; 1:00 pm</a> </h5>
@@ -41,7 +41,7 @@ In the last part of the talk we will discuss some applications of Stein's square
                     <strong>Abstract:</strong> We formulate and prove a Paley-Wiener theorem for Harish-Chandra modules for real reductive groups. As a corollary we obtain a new and elementary proof of the Helgason conjecture </p>
             </div>
             <hr class="col-xs-12">
-            <div class="border-bottom border-secondary" id="Garg">
+            <div class="border-bottom border-secondary" id="garg">
                 <h5><strong>Speaker:</strong> Rahul Garg  </h5>
                 <h5><strong>Title:</strong> On pseudo-multipliers associated to Grushin operators </h5>
                 <h5><strong>Time:</strong> <a href="index.html#schedule">2:30 pm &ndash; 3:30 pm</a> </h5>
