--- a/thangavelufest/index.html
+++ b/thangavelufest/index.html
@@ -53,7 +53,7 @@ css: "thangavelu-fest"
                         <tr>
                             <td>09:30 am &ndash; 10:30 am</td>
                             <td>Jotsaroop Kaur (IISER Mohali)</td>
-			    <td><a href="titles.html#Kaur"> Maximal Bilinear Bochner Riesz means and some applications</a></td>
+			    <td><a href="titles.html#kaur"> Maximal Bilinear Bochner Riesz means and some applications</a></td>
                         </tr>
                         </tr>
 			<tr class="text-center">
@@ -62,12 +62,12 @@ css: "thangavelu-fest"
                         <tr>
                             <td>11:00 am &ndash; 12:00 pm </td>
                             <td>Pritam Ganguly (IISc)</td>
-			    <td><a href="titles.html#Pritam"> Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</a></td>
+			    <td><a href="titles.html#pritam"> Ornstein-Uhlenbeck meet Hermite: Extension problems and fractional Hardy type inequalities.</a></td>
                         </tr>
                         <tr>
                             <td>12:00 pm &ndash; 1:00 pm</td>
                             <td>Bernhard Krotz (University of Paderborn, Germany)</td>
-			    <td><a href="titles.html#Krotz"> A Paley-Wiener theorem for Harish-Chandra modules</a></td>
+			    <td><a href="titles.html#krotz"> A Paley-Wiener theorem for Harish-Chandra modules</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> LUNCH </td>
@@ -75,7 +75,7 @@ css: "thangavelu-fest"
                         <tr>
                             <td>2:30 pm &ndash; 3:30 pm</td>
 			    <td>Rahul Garg (IISER Bhopal)</td>
-			    <td><a href="titles.html#Garg"> On pseudo-multipliers associated to Grushin operators</a></td>
+			    <td><a href="titles.html#garg"> On pseudo-multipliers associated to Grushin operators</a></td>
                         </tr>
                         <tr class="text-center">
                             <td class="gold" colspan="3"> COFFEE BREAK </td>
