--- a/adamkoranyibirthday/index.html
+++ b/adamkoranyibirthday/index.html
@@ -25,6 +25,7 @@ css: "ak-fest"
                  The meeting will be held in virtual mode and a zoom link will be provided closer to the date of the meeting.
             </p>
 	    <p> Three talks are scheduled during the first half and the second half would be for colleagues and friends to speak of their friendship and mathematical collaboration with Professor Adam Korányi. The times indicated in the schedule of talks are local times in India. </p>
+	    <p> <a href="http://math.iisc.ac.in/adamkoranyibirthday/ProfessorKoranyiEventPoster.pdf" target="_blank">Download Poster</a> </p>
 	    <h2>Organizing Committee</h2>
             <ul>
                 <li>Gadadhar Misra </li>
