--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -369,7 +369,7 @@
                                 <dt class="text-white-50 mb-6"><li>Poster marathon submissions</li></dt>
                             </div>
                             <div class="col-sm">
-				    <dd class="text-white-50 mb-6">July 6, 2022</dd>
+				    <dd class="text-white-50 mb-6"><del>July 6, 2022</del></dd>
                             </div>
                         </div>
                     </div>
@@ -947,11 +947,20 @@
             <div class="col-lg-8 text-center">
                 <h4 style="text-align: center;">Social Events</h4>
                 <hr class="divider my-4" />
+                <p style="text-align: left;">
+                    There will be a half-day trip to 
+                    <a href="https://en.wikipedia.org/wiki/Shravanabelagola">Shravanabelagola</a> leaving at 1:30pm
+                    on Wednesday, July 20. Transportation will be arranged for interested participants.
+                </p>
                 <p style="text-align: left;">The banquet for the conference will be held at 
 			<a href="https://www.royalorchidhotels.com/royal-orchid-resort-convention-centre-bangalore/overview">
-                Royal Orchid Resort & Convention Centre</a>, about ten kilometers away from the venue, on Thursday July 21. 
-		Transportation will be arranged for participants. 
-                More details will be shared closer to the date of the conference.</p> 
+                Royal Orchid Resort & Convention Centre</a>, about ten kilometers away from the venue, on 
+                the evening of Thursday July 21. Transportation will be arranged for participants. 
+                More details will be shared closer to the date of the conference.
+                </p> 
+                <p>
+                    There will be a cultural programme on the evening of Saturday, July 23.
+                </p>
             </div>
         </div>
     </div>
@@ -989,7 +998,7 @@
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/" target="_blank">Combinatorial Methods in Graph Theory</a></h5>
                     <p style="text-align: center;">Amrita University, Coimbatore, July 14-16<br>
-                        <span style="color:blue;">Registration is open until June 15.</span></p>
+                        <span style="color:blue;"><del>Registration is open until June 15.</del></span></p>
                 </div>
 
                 <div class="col-sm">
