Added brochure and pre-reg

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -948,6 +948,10 @@
                 <h4 style="text-align: center;">Social Events</h4>
                 <hr class="divider my-4" />
                 <p style="text-align: left;">
+                    There will be pre-registration at the Centenary Visitors House (CVH) dining hall 
+                    inside the IISc campus from 5:00 to 6:30 PM on Sunday July 17.
+                </p>
+                <p style="text-align: left;">
                     There will be a half-day trip to 
                     <a href="https://en.wikipedia.org/wiki/Shravanabelagola">Shravanabelagola</a> leaving at 1:30pm
                     on Wednesday, July 20. Transportation will be arranged for interested participants.
@@ -956,10 +960,10 @@
 			<a href="https://www.royalorchidhotels.com/royal-orchid-resort-convention-centre-bangalore/overview">
                 Royal Orchid Resort & Convention Centre</a>, about ten kilometers away from the venue, on 
                 the evening of Thursday July 21. Transportation will be arranged for participants. 
-                More details will be shared closer to the date of the conference.
                 </p> 
-                <p>
-                    There will be a cultural programme on the evening of Saturday, July 23.
+                <p style="text-align: left;">
+                    There will be a cultural programme on the evening of Saturday, July 23. 
+                    More details will be shared closer to the date of the conference.
                 </p>
             </div>
         </div>
@@ -1503,10 +1507,12 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Schedule</h2>
                     <hr class="divider light my-4" />
-                    <p>A tentative schedule is as follows:</p>
+                    <p>The final schedule is as follows:
                     <a href="assets/img/schedule.png" target="_blank">
                     <img class="img-fluid" src="assets/img/schedule.png" alt="Tentative schedule" style="width:750px;">
                     </a> 
+                    The complete brochure is available <a href="assets/img/FPSAC2022BrochureSmall.pdf"></a>here</a>
+                    </p>
                     <p class="text-white-50 mb-4">The list of accepted talks and posters is below. Presenters are marked with an asterisk. 
                     </p>
                 </div>
