Fixed brochure hyperlink

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1511,7 +1511,7 @@
                     <a href="assets/img/schedule.png" target="_blank">
                     <img class="img-fluid" src="assets/img/schedule.png" alt="Tentative schedule" style="width:750px;">
                     </a> 
-                    The complete brochure is available <a href="assets/img/FPSAC2022BrochureSmall.pdf"></a>here</a>
+                    The complete brochure is available <a href="assets/img/FPSAC2022BrochureSmall.pdf">here</a>
                     </p>
                     <p class="text-white-50 mb-4">The list of accepted talks and posters is below. Presenters are marked with an asterisk. 
                     </p>
