--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -141,8 +141,7 @@
                 </div>
                 <div class="col-sm">
                     <h3 style="text-align: center;" class="h4 mb-2"><a
-                            href="https://psniady.impan.pl/data/uploads/cv/list-of-publications-2017.pdf">Piotr
-                            Śniady</a></h3>
+                            href="https://psniady.impan.pl/fpsac.html">Piotr Śniady</a></h3>
                     <p style="text-align: center;">Polish Academy of Sciences</p>
                     <!--<p style="text-align: center;">TBA</p> -->
                 </div>
