Livestream link and published EAs

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1511,8 +1511,12 @@
                     <img class="img-fluid" src="assets/img/schedule.png" alt="Tentative schedule" style="width:750px;">
                     </a> 
                     The complete brochure is available <a href="assets/img/FPSAC2022BrochureSmall.pdf">here</a>.
+                    The YouTube livestream link is <a href="https://youtu.be/dMheBgrl-sQ">here</a>.
+                    The preliminary version of the published extended abstracts are available
+                    <a href="https://www.mat.univie.ac.at/~slc/wpapers/FPSAC2022/">here</a>.
                     </p>
-                    <p class="text-white-50 mb-4">The list of accepted talks and posters is below. Presenters are marked with an asterisk. 
+                    <p class="text-white-50 mb-4">The list of accepted talks and posters is below. 
+                        Presenters are marked with an asterisk. 
                     </p>
                 </div>
             </div>
